# robot-lockhongkhi

my_robot/myrobot_description/: package.xml
my_robot/myrobot_description/launch/: display.launch  gazebo.launch  myrobot.launch
my_robot/myrobot_description/meshes/: base_link.STL  left_Link.STL  right_Link.STL
my_robot/myrobot_description/urdf/: myrobot_depsciption.csv  myrobot_description.gazebo.xacro  myrobot_description.urdf.xacro
my_robot/myrobot_description1/: CMakeLists.txt  package_backup.xml
my_robot/myrobot_description1/config/: joint_names_myrobot_description.yaml
my_robot/myrobot_description1/launch/: display.launch  gazebo.launch
my_robot/myrobot_description1/meshes/: Caster_Back_Link.STL  Caster_Front_Link.STL  Left_Wheel_Link.STL  Right_Wheel_Link.STL  base_link.STL  body_Link.STL
my_robot/myrobot_description1/urdf/: myrobot.xacro  myrobot_description.gazebo.xacro  myrobot_description.urdf.xacro
my_robot/myrobot_gazebo/: CMakeLists.txt  package.xml
my_robot/myrobot_gazebo/launch/: myrobot_house.launch
my_robot/myrobot_gazebo/worlds/: myrobot_house.world
my_robot/myrobot_navigation/: CMakeLists.txt  package.xml
my_robot/myrobot_navigation/launch/: move_base.launch  myrobot_navigation.launch
my_robot/myrobot_navigation/maps/: map.pgm  map.yaml
my_robot/myrobot_navigation/param/: base_local_planner_params.yaml  (+2 more)
my_robot/myrobot_setup/: CMakeLists.txt  package.xml
my_robot/myrobot_slam/: CMakeLists.txt  package.xml
my_robot/myrobot_teleop/: CMakeLists.txt  package.xml  setup.py
my_robot/pid/: pid.ino
(+13 files in other folders)
